--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,4 +1,3 @@
-
 version: 0.2
 env:
   variables:
@@ -7,12 +6,8 @@ phases:
   install:
     commands:
       - npm install
-  build:
-    commands:
-      - npm run webpack
 artifacts:
   files:
     - "build/index.js"
-    - "node_modules/.bin/phantomjs"
-    - "node_modules/.bin/phantomjs.cmd"
+    - "node_modules"
   
