--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,9 +10,9 @@ phases:
     commands:
       - npx webpack --config webpack.config.js
       - npx webpack --config phantom-package.js
-      - mkdir ./build/node_modules/phantomjs-prebuilt/phantom
-      - cp -r ./node_modules/phantomjs-prebuilt/lib/phantom/ ./build/node_modules/phantomjs-prebuilt/phantom/
+      - cp -r ./node_modules/phantomjs-prebuilt/lib/phantom/ ./build/node_modules/phantomjs-prebuilt/
 artifacts:
   files:
-    - "./build/**/*"
+    - "**/*"
+  base-directory: "build"
   
