--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,13 +6,8 @@ phases:
   install:
     commands:
       - npm install
-  build:
-    commands:
-      - npx webpack --config webpack.config.js
-      - npx webpack --config phantom-package.js
-      - cp -r ./node_modules/phantomjs-prebuilt/lib/phantom/ ./build/node_modules/phantomjs-prebuilt/
 artifacts:
   files:
-    - "**/*"
-  base-directory: "build"
+    - "src/index.js"
+    - "node_modules/**/*"
   
